# flask-paranoid

./: .travis.yml  CHANGES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat
docs/_templates/: about.html  links.html
example/: app.py  requirements.txt
example/templates/: index.html
flask_paranoid/: __init__.py  paranoid.py
src/flask_paranoid/: __init__.py  paranoid.py
tests/: test_paranoid.py
